[package]
name = "parachain-template-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.0.2", default-features = false }

parachain-template-runtime = { path = "..", default-features = false }

codec = { version = "3.6.12", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

sp-runtime = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }

pallet-timestamp = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }

cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-parachain-inherent = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
cumulus-test-relay-sproof-builder = { workspace = true, default-features = false }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "parachain-template-runtime/std",
        "sp-runtime/std",
        "frame-support/std",
        "pallet-timestamp/std",
        "sp-consensus-aura/std",
        "pallet-grandpa/std",
]
try-runtime = [
    "parachain-template-runtime/try-runtime",
        "frame-support/try-runtime",
        "pallet-timestamp/try-runtime",
]
